# toy-gpu-compiler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yaml
examples/: Makefile  addition.toy  example1.toy  example2.toy  example3.toy  main.cpp  run.sh  saxpy.toy
src/: IntrinsicsHelper.cpp  IntrinsicsHelper.h  Toy.g4  ToyIRGenerationListener.cpp  ToyIRGenerationListener.h  main.cpp
src/toy_parser/: Toy.interp  ToyBaseListener.cpp  ToyBaseListener.h  ToyLexer.cpp  ToyLexer.h  ToyLexer.interp  ToyLexer.tokens  ToyListener.cpp  ToyListener.h  ToyParser.cpp  ToyParser.h
